PA2/cool.output
Terminals unused in grammar

   ERROR


State 10 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 130 conflicts: 9 shift/reduce
State 141 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error

    7 feature_list: feature ';'
    8             | feature_list feature ';'
    9             | /* empty */
   10             | error ';'

   11 feature: OBJECTID ':' TYPEID
   12        | OBJECTID '(' formal_list ')' ':' TYPEID '{' exp '}'
   13        | OBJECTID ':' TYPEID ASSIGN exp

   14 formal_list: formal
   15            | formal_list ',' formal
   16            | /* empty */

   17 formal: OBJECTID ':' TYPEID

   18 case_list: case
   19          | case_list case
   20          | /* empty */

   21 case: OBJECTID ':' TYPEID DARROW exp ';'

   22 exp_list: exp ';'
   23         | exp_list exp ';'
   24         | error ';'

   25 exp_parameter: exp
   26              | exp_parameter ',' exp
   27              | /* empty */
   28              | error ','

   29 exp_let: OBJECTID ':' TYPEID IN exp
   30        | OBJECTID ':' TYPEID ASSIGN exp IN exp
   31        | OBJECTID ':' TYPEID ',' exp_let
   32        | OBJECTID ':' TYPEID ASSIGN exp ',' exp_let
   33        | error exp_let

   34 exp: OBJECTID ASSIGN exp
   35    | exp '@' TYPEID '.' OBJECTID '(' exp_parameter ')'
   36    | OBJECTID '(' exp_parameter ')'
   37    | exp '.' OBJECTID '(' exp_parameter ')'
   38    | IF exp THEN exp ELSE exp FI
   39    | WHILE exp LOOP exp POOL
   40    | '{' exp_list '}'
   41    | LET exp_let
   42    | CASE exp OF case_list ESAC
   43    | NEW TYPEID
   44    | ISVOID exp
   45    | exp '+' exp
   46    | exp '-' exp
   47    | exp '*' exp
   48    | exp '/' exp
   49    | '~' exp
   50    | exp '<' exp
   51    | exp LE exp
   52    | exp '=' exp
   53    | NOT exp
   54    | '(' exp ')'
   55    | OBJECTID
   56    | INT_CONST
   57    | STR_CONST
   58    | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 35 36 37 54
')' (41) 12 35 36 37 54
'*' (42) 47
'+' (43) 45
',' (44) 15 26 28 31 32
'-' (45) 46
'.' (46) 35 37
'/' (47) 48
':' (58) 11 12 13 17 21 29 30 31 32
';' (59) 4 5 7 8 10 21 22 23 24
'<' (60) 50
'=' (61) 52
'@' (64) 35
'{' (123) 4 5 12 40
'}' (125) 4 5 12 40
'~' (126) 49
error (256) 6 10 24 28 33
CLASS (258) 4 5
ELSE (259) 38
FI (260) 38
IF (261) 38
IN (262) 29 30
INHERITS (263) 5
LET (264) 41
LOOP (265) 39
POOL (266) 39
THEN (267) 38
WHILE (268) 39
CASE (269) 42
ESAC (270) 42
OF (271) 42
DARROW (272) 21
NEW (273) 43
ISVOID (274) 44
STR_CONST (275) 57
INT_CONST (276) 56
BOOL_CONST (277) 58
TYPEID (278) 4 5 11 12 13 17 21 29 30 31 32 35 43
OBJECTID (279) 11 12 13 17 21 29 30 31 32 34 35 36 37 55
ASSIGN (280) 13 30 32 34
NOT (281) 53
LE (282) 51
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8 9 10, on right: 4 5 8
feature (50)
    on left: 11 12 13, on right: 7 8
formal_list (51)
    on left: 14 15 16, on right: 12 15
formal (52)
    on left: 17, on right: 14 15
case_list (53)
    on left: 18 19 20, on right: 19 42
case (54)
    on left: 21, on right: 18 19
exp_list (55)
    on left: 22 23 24, on right: 23 40
exp_parameter (56)
    on left: 25 26 27 28, on right: 26 35 36 37
exp_let (57)
    on left: 29 30 31 32 33, on right: 31 32 33 41
exp (58)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58, on right: 12 13 21 22 23 25 26 29 30 32 34
    35 37 38 39 42 44 45 46 47 48 49 50 51 52 53 54


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error .

    $default  reduce using rule 6 (class)


state 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


state 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    OBJECTID  [reduce using rule 9 (feature_list)]
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 14
    feature       go to state 15


state 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 16


state 12

   10 feature_list: error . ';'

    ';'  shift, and go to state 17


state 13

   11 feature: OBJECTID . ':' TYPEID
   12        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' exp '}'
   13        | OBJECTID . ':' TYPEID ASSIGN exp

    ':'  shift, and go to state 18
    '('  shift, and go to state 19


state 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 20

    feature  go to state 21


state 15

    7 feature_list: feature . ';'

    ';'  shift, and go to state 22


state 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    OBJECTID  [reduce using rule 9 (feature_list)]
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 23
    feature       go to state 15


state 17

   10 feature_list: error ';' .

    $default  reduce using rule 10 (feature_list)


state 18

   11 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN exp

    TYPEID  shift, and go to state 24


state 19

   12 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' exp '}'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 16 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


state 20

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


state 21

    8 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 29


state 22

    7 feature_list: feature ';' .

    $default  reduce using rule 7 (feature_list)


state 23

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 30

    feature  go to state 21


state 24

   11 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN exp

    ASSIGN  shift, and go to state 31

    $default  reduce using rule 11 (feature)


state 25

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


state 26

   12 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' exp '}'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


state 27

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


state 28

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 29

    8 feature_list: feature_list feature ';' .

    $default  reduce using rule 8 (feature_list)


state 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


state 31

   13 feature: OBJECTID ':' TYPEID ASSIGN . exp

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp  go to state 50


state 32

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 51


state 33

   12 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' exp '}'

    ':'  shift, and go to state 52


state 34

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 53


state 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 36

   38 exp: IF . exp THEN exp ELSE exp FI

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp  go to state 54


state 37

   41 exp: LET . exp_let

    error     shift, and go to state 55
    OBJECTID  shift, and go to state 56

    exp_let  go to state 57


state 38

   39 exp: WHILE . exp LOOP exp POOL

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp  go to state 58


state 39

   42 exp: CASE . exp OF case_list ESAC

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp  go to state 59


state 40

   43 exp: NEW . TYPEID

    TYPEID  shift, and go to state 60


state 41

   44 exp: ISVOID . exp

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp  go to state 61


state 42

   57 exp: STR_CONST .

    $default  reduce using rule 57 (exp)


state 43

   56 exp: INT_CONST .

    $default  reduce using rule 56 (exp)


state 44

   58 exp: BOOL_CONST .

    $default  reduce using rule 58 (exp)


state 45

   34 exp: OBJECTID . ASSIGN exp
   36    | OBJECTID . '(' exp_parameter ')'
   55    | OBJECTID .

    ASSIGN  shift, and go to state 62
    '('     shift, and go to state 63

    $default  reduce using rule 55 (exp)


state 46

   53 exp: NOT . exp

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp  go to state 64


state 47

   49 exp: '~' . exp

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp  go to state 65


state 48

   40 exp: '{' . exp_list '}'

    error       shift, and go to state 66
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp_list  go to state 67
    exp       go to state 68


state 49

   54 exp: '(' . exp ')'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp  go to state 69


state 50

   13 feature: OBJECTID ':' TYPEID ASSIGN exp .
   35 exp: exp . '@' TYPEID '.' OBJECTID '(' exp_parameter ')'
   37    | exp . '.' OBJECTID '(' exp_parameter ')'
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '<' exp
   51    | exp . LE exp
   52    | exp . '=' exp

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '.'  shift, and go to state 77
    '@'  shift, and go to state 78

    $default  reduce using rule 13 (feature)


state 51

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


state 52

   12 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' exp '}'

    TYPEID  shift, and go to state 79


state 53

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


state 54

   35 exp: exp . '@' TYPEID '.' OBJECTID '(' exp_parameter ')'
   37    | exp . '.' OBJECTID '(' exp_parameter ')'
   38    | IF exp . THEN exp ELSE exp FI
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '<' exp
   51    | exp . LE exp
   52    | exp . '=' exp

    THEN  shift, and go to state 80
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '.'   shift, and go to state 77
    '@'   shift, and go to state 78


state 55

   33 exp_let: error . exp_let

    error     shift, and go to state 55
    OBJECTID  shift, and go to state 56

    exp_let  go to state 81


state 56

   29 exp_let: OBJECTID . ':' TYPEID IN exp
   30        | OBJECTID . ':' TYPEID ASSIGN exp IN exp
   31        | OBJECTID . ':' TYPEID ',' exp_let
   32        | OBJECTID . ':' TYPEID ASSIGN exp ',' exp_let

    ':'  shift, and go to state 82


state 57

   41 exp: LET exp_let .

    $default  reduce using rule 41 (exp)


state 58

   35 exp: exp . '@' TYPEID '.' OBJECTID '(' exp_parameter ')'
   37    | exp . '.' OBJECTID '(' exp_parameter ')'
   39    | WHILE exp . LOOP exp POOL
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '<' exp
   51    | exp . LE exp
   52    | exp . '=' exp

    LOOP  shift, and go to state 83
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '.'   shift, and go to state 77
    '@'   shift, and go to state 78


state 59

   35 exp: exp . '@' TYPEID '.' OBJECTID '(' exp_parameter ')'
   37    | exp . '.' OBJECTID '(' exp_parameter ')'
   42    | CASE exp . OF case_list ESAC
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '<' exp
   51    | exp . LE exp
   52    | exp . '=' exp

    OF   shift, and go to state 84
    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '.'  shift, and go to state 77
    '@'  shift, and go to state 78


state 60

   43 exp: NEW TYPEID .

    $default  reduce using rule 43 (exp)


state 61

   35 exp: exp . '@' TYPEID '.' OBJECTID '(' exp_parameter ')'
   37    | exp . '.' OBJECTID '(' exp_parameter ')'
   44    | ISVOID exp .
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '<' exp
   51    | exp . LE exp
   52    | exp . '=' exp

    '.'  shift, and go to state 77
    '@'  shift, and go to state 78

    $default  reduce using rule 44 (exp)


state 62

   34 exp: OBJECTID ASSIGN . exp

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    exp  go to state 85


state 63

   36 exp: OBJECTID '(' . exp_parameter ')'

    error       shift, and go to state 86
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    ')'  reduce using rule 27 (exp_parameter)
    ','  reduce using rule 27 (exp_parameter)

    exp_parameter  go to state 87
    exp            go to state 88


state 64

   35 exp: exp . '@' TYPEID '.' OBJECTID '(' exp_parameter ')'
   37    | exp . '.' OBJECTID '(' exp_parameter ')'
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '<' exp
   51    | exp . LE exp
   52    | exp . '=' exp
   53    | NOT exp .

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '.'  shift, and go to state 77
    '@'  shift, and go to state 78

    $default  reduce using rule 53 (exp)


state 65

   35 exp: exp . '@' TYPEID '.' OBJECTID '(' exp_parameter ')'
   37    | exp . '.' OBJECTID '(' exp_parameter ')'
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   49    | '~' exp .
   50    | exp . '<' exp
   51    | exp . LE exp
   52    | exp . '=' exp

    $default  reduce using rule 49 (exp)


state 66

   24 exp_list: error . ';'

    ';'  shift, and go to state 89


state 67

   23 exp_list: exp_list . exp ';'
   40 exp: '{' exp_list . '}'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '}'         shift, and go to state 90
    '('         shift, and go to state 49

    exp  go to state 91


state 68

   22 exp_list: exp . ';'
   35 exp: exp . '@' TYPEID '.' OBJECTID '(' exp_parameter ')'
   37    | exp . '.' OBJECTID '(' exp_parameter ')'
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '<' exp
   51    | exp . LE exp
   52    | exp . '=' exp
